--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -373,7 +373,7 @@
                                                                     </div>
                                                               	</div>
                                                             </div>
-                                                            <p id="individualiving">Is this of a living individual?</p>                                            			
+                                                            <p id="individualiving">Does this refer to a particular living individual? See the <a href="https://www.uspto.gov/trademark/laws-regulations/inquiry-regarding-nameportraitsignature-particular-living-individual-mark" target="_blank">Name/Portrait/Consent help page<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span><span class="sr-only">Opens in new window</span></a></p>                                            			
                                                             <div role="radiogroup" class="form-group form-group-md" aria-labelledby="individualiving">
                                                                 <label for="inlineRadio17" class="radio-inline radiocontainer">Yes<input type="radio" name="livindividualradio" id="inlineRadio17" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                                 <label for="inlineRadio18" class="radio-inline radiocontainer">No<input type="radio" name="livindividualradio" id="inlineRadio18" value="no" tabindex="0"><span class="checkmark"></span></label>
