--- a/import_corp.html
+++ b/import_corp.html
@@ -76,9 +76,9 @@
                               <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
                                     <label for="state">State/Province/Territory</label>
                                     <input type="text" class="form-control" id="state" th:field="*{ownerState}">
-                              </div>
+                                  </div>
                               <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                <label for="zipcode">Zip code/Postal code</label>
+                                <label for="zipcode">Zip Code/Postal Code</label>
                                 <input type="text" class="form-control" id="zipcode" placeholder="XXXXX" th:field="*{ownerZipcode}">
                               </div>
                               <div class="row">
