--- a/layout_M7.html
+++ b/layout_M7.html
@@ -182,7 +182,7 @@
                                 <input type="text" class="form-control" id="ownername" name="ownername" th:field="*{firstName}" aria-required="true" aria-invalid="false">
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
-                                <label for="additionalname">Additional name</label>
+                                <label for="additionalname">Alternate name <a href="#" data-toggle="tooltip" title="Make selection below if the owner is doing business as or trading under a different name." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                                 <select class="form-control" id="additionalname" th:field="*{ownerType}">
                                   <option value="Select">Select</option>
                                   <option value="DBA">Doing Business As (DBA)</option>
