--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -229,7 +229,7 @@
                                                                     <div class="form-group form-group-md col-xs-12 visuallyremoved resettranslation">
                                                                         <button type="button" class="btn btn-sm close resettranslationbtn" aria-label="remove this translation"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                     </div>
-                                                                    <div class="form-group form-group-md col-xs-12 col-md-3">
+                                                                    <div class="form-group form-group-md col-xs-12 col-md-2">
                                                                         <label for="language">Language</label>
                                                                         <select class="form-control" id="language">
                                                                           <option value="Select">Select</option>
@@ -238,8 +238,8 @@
                                                                             <option value="French">French</option>
                                                                         </select>
                                                                     </div>
-                                                                    <div class="form-group form-group-md col-xs-12 col-md-5">
-                                                                        <label for="engtranslation">The English translation of</label>
+                                                                    <div class="form-group form-group-md col-xs-12 col-md-6">
+                                                                        <label for="engtranslation">The English translation of the word</label>
                                                                         <input type="text" class="form-control" id="engtranslation">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12 col-md-4">
@@ -383,7 +383,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <p id="individualiving">Is this of a living individual?</p>                                            			
+                                                            <p id="individualiving">Does this refer to a particular living individual? See the <a href="https://www.uspto.gov/trademark/laws-regulations/inquiry-regarding-nameportraitsignature-particular-living-individual-mark" target="_blank">Name/Portrait/Consent help page<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span><span class="sr-only">Opens in new window</span></a></p>                                            			
                                                             <div role="radiogroup" class="form-group form-group-md" aria-labelledby="individualiving">
                                                                 <label for="inlineRadio17" class="radio-inline radiocontainer">Yes<input type="radio" name="livindividualradio" id="inlineRadio17" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                                 <label for="inlineRadio18" class="radio-inline radiocontainer">No<input type="radio" name="livindividualradio" id="inlineRadio18" value="no" tabindex="0"><span class="checkmark"></span></label>
