--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -195,10 +195,10 @@
                                         <p>Entity is the applicant&#8217;s form of business, for example, partnership, joint venture, corporation, or association.</p>
                                     </div>
                                 </div>
-                                <p id="usforeign">Is the owner a U.S. or Foreign Entity?</p>
+                                <p id="usforeign">Is the owner of the mark a U.S. or Foreign Entity? <a href="#" data-toggle="tooltip" title="Owner of the mark is the full legal name of the applicant, i.e., of the individual, corporation, partnership, or other entity that owns the mark, not the person or firm completing the application." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></p>
                                 <form method="post" id="ownerindividualform" action="">
                                     <div role="radiogroup" aria-labelledby="usforeign" class="form-group form-group-md">
-                                      <label for="inlineRadio019" class="radio-inline radiocontainer" id="usentityselected">US Entity<input type="radio" name="usforeignradio" id="inlineRadio019" value="usentity" tabindex="0"><span class="checkmark"></span></label>
+                                      <label for="inlineRadio019" class="radio-inline radiocontainer" id="usentityselected">U.S. Entity<input type="radio" name="usforeignradio" id="inlineRadio019" value="usentity" tabindex="0"><span class="checkmark"></span></label>
                                       <label for="inlineRadio020" class="radio-inline radiocontainer" id="foreignentityselected">Foreign Entity<input type="radio" name="usforeignradio" id="inlineRadio020" value="foreignentity" tabindex="0"><span class="checkmark"></span></label>
                                     </div><!--END radiogroup-->
                                     <script type="application/javascript" src="js/accordion.js"></script>
