--- a/dashboard.html
+++ b/dashboard.html
@@ -108,11 +108,11 @@
                                                                         <th colspan="5" scope="colgroup"><span id="filingsheader">Filings</span> <button type="button" class="btn-sm btn-success fill">New Application</button></th>
                                                                     </tr>
                                                                     <tr role="row">
-                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
-                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Registration#</th>
-                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Owner</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Status</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Mark</th>
+                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader">Serial#</th>
+                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader">Registration#</th>
+                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader">Owner</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader">Status</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader">Mark</th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
@@ -171,13 +171,13 @@
                                                                         <th colspan="7" scope="colgroup">Upcoming Action Due</th>
                                                                     </tr>
                                                                     <tr role="row">
-                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Select: activate to sort column descending">Serial#</th>
-                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Class-num: activate to sort column descending">Registration#</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Description: activate to sort column ascending">Mark</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Owner</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Due Date</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Status</th>
-                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending">Action</th>
+                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Serial#</th>
+                                                                        <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Registration#</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Mark</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Owner</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Due Date</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Status</th>
+                                                                        <th scope="col" class="sorting" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending">Action</th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
