--- a/owner_info_review.html
+++ b/owner_info_review.html
@@ -74,19 +74,19 @@
           
           <ul class="nav navbar-nav navbar-right" id="lowernav">
           	<li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
-                <li role="status" aria-live="polite">Extra Class Fee $0</li>
-                <li role="status" aria-live="polite">Total Classes 0</li>
-                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" aria-live="assertive">Fees $<span id="displayfees">225</span><span class="caret"></span></a>
+              <ul class="dropdown-menu" id="classfees">
+                <li id="firstli" aria-live="assertive">Basic Fees $<span>225</span></li>
+                <li id="classli" aria-live="assertive">Extra Class Fee $<span>0</span></li>
+                <li aria-live="assertive">Total Classes 0</li>
+                <li id="lastli" aria-live="assertive">Total Fee $<span>225</span></li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
             <li><a href="#">Applications / Registration</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showcontacts"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>Managed Contacts</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showfees"><span class="glyphicon glyphicon-usd kerned" aria-hidden="true"></span>Fees</a></li>-->
-            <li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Show My Mark</a></li>
+            <li><a href="#" class="glyphed" data-toggle="popover" id="togglepop" aria-live="assertive"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Show My Mark</a></li>
           </ul>
           <br style="clear:both">
         </div><!-- /.navbar-collapse -->
