--- a/filing_basis_ab.html
+++ b/filing_basis_ab.html
@@ -263,7 +263,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenone" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_1" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenone" tabindex="0" aria-labelledby="individualspecimen_1" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
@@ -319,7 +319,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimentwo" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_2" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimentwo" tabindex="0" aria-labelledby="individualspecimen_2" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
@@ -430,7 +430,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenthree" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_3" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenthree" tabindex="0" aria-labelledby="individualspecimen_3" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_3"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
@@ -486,7 +486,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenfour" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_4" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenfour" tabindex="0" aria-labelledby="individualspecimen_4" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_4"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
@@ -596,7 +596,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenfive" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_5" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenfive" tabindex="0" aria-labelledby="individualspecimen_5" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_5"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
@@ -652,7 +652,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimensix" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_6" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimensix" tabindex="0" aria-labelledby="individualspecimen_6" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_6"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
