--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -260,7 +260,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenseven" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_1" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenseven" tabindex="0" aria-labelledby="individualspecimen_1" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
@@ -439,7 +439,7 @@
                                                                 <input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value="">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen">
-                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimeneight" role="checkbox" tabindex="0" aria-labelledby="individualspecimen_2" id="">
+                                                                <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimeneight" tabindex="0" aria-labelledby="individualspecimen_2" id="">
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
