--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -180,7 +180,7 @@
                                <fieldset>
                                     <legend>Select the type of mark you are applying for</legend>
                                     <div><!-- Button trigger modal -->
-                                        <input class="form-check-input checkmark" type="checkbox" value="Trademark / Servicemark" role="checkbox" tabindex="0" aria-labelledby="tradeserv2" id="tradeserv">
+                                        <input class="form-check-input checkmark" type="checkbox" value="Trademark / Servicemark" tabindex="0" aria-labelledby="tradeserv2" id="tradeserv">
                                         <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
                                     <div role="heading" aria-level="3">
