--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -238,7 +238,7 @@
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
                                                             <img src="images/designonly_alt1.gif" class="img-thumbnail" alt="your black and white mark"> 
                                                             <div class="bwimage">
-                                                                <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" role="checkbox" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
+                                                                <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
                                                                 <label class="form-check-label form-check" for="bwmark" id="acceptmark"><span class="radio notspecial">Accept the black and white drawing.</span></label>
                                                             </div>
                                                             <div class="alert alert-warning" role="alert">
