Dashboard Cahnge Requests + a11y Dev
Dashboard Datatables Accessibility Development completed:

- Added aria-hidden = true for hidden columns (doesn’t test out in Safari/Voiceover — may need further dev work, maybe this is device-dependant)
- aria-alert = assertive to Toggle column visibility
- Toggle column visibility menu keyboard accessible and announces ‘expanded/collapsed’ and announces titles of toggle links when meu shows
- main nav drop-down lists announce ‘expanded/collapsed’
- Toggle Columns visibility toggles announcement ‘hide/show’
- Updated Toggle Column visibility checkmark toggle behavior in Table Two

Added link to File a Petition to Revive and adjusted column widths accordingly

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="layout (template, menu)" lang="en" xml:lang="en">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -188,7 +188,7 @@
                                                                     <td tabindex="0">Lynn Stanikmas</td>
                                                                     <td tabindex="0">12/21/2019</td>
                                                                     <td tabindex="0">Abandoned</td>
-                                                                    <td tabindex="0">Resubmit</td>
+                                                                    <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
                                                                     <td tabindex="0">87697248</td>
@@ -215,7 +215,7 @@
                                                                     <td tabindex="0">Lynn Stanikmas</td>
                                                                     <td tabindex="0">12/21/2019</td>
                                                                     <td tabindex="0">Abandoned</td>
-                                                                    <td tabindex="0">Resubmit</td>
+                                                                    <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
                                                                     <td tabindex="0">87697248</td>
@@ -242,7 +242,7 @@
                                                                     <td tabindex="0">Lynn Stanikmas</td>
                                                                     <td tabindex="0">12/21/2019</td>
                                                                     <td tabindex="0">Abandoned</td>
-                                                                    <td tabindex="0">Resubmit</td>
+                                                                    <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
                                                                     <td tabindex="0">87697248</td>
